@@ -1,4 +1,11 @@
-2011-07-27 Philipp Klaus Krause philipp AT informatik.uni-frankfurt.de>
+2011-07-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc,
+	  src/SDCCtree_dec.hpp:
+	  Minor code cleanup.
+	  
+2011-07-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* Merge from trunk.
 
